--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -2,53 +2,34 @@
 
 <!DOCTYPE html>
 <html lang="ko" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mueossa</title>
     <script th:src="@{/js/main_script.js}"></script>
+    <script th:src="@{/js/wish_script.js}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/main_style.css}" />
 
     <th:block layout:fragment="script"></th:block>
     <th:block layout:fragment="css"></th:block>
-</head>
+  </head>
 
-<body>
-
-
-
-
+  <body>
     <div class="background"></div>
 
     <div class="mobile-frame">
+      <!-- 페이지 콘텐츠 -->
 
+      <th:block th:replace="~{fragments/header :: header}"></th:block>
 
-        <!-- 페이지 콘텐츠 -->
+      <th:block layout:fragment="content"></th:block>
 
+      <th:block th:replace="~{fragments/footer :: footer}"></th:block>
 
-
-
-
-
-
-
-
-        <th:block th:replace="~{fragments/header :: header}"></th:block>
-
-
-
-        <th:block layout:fragment="content"></th:block>
-
-
-        <th:block th:replace="~{fragments/footer :: footer}"></th:block>
-
-        <button id="topButton" class="top-button">▲</button>
-
+      <button id="topButton" class="top-button">▲</button>
     </div>
 
     <th:block layout:fragment="script-footer"></th:block>
-</body>
-
+  </body>
 </html>
