--- a/src/main/resources/templates/filterCategory.html
+++ b/src/main/resources/templates/filterCategory.html
@@ -12,7 +12,10 @@
 
   <div layout:fragment="content">
     <div id="category" class="page">
-      <div class="section-title2">당신의 취향을 선택하세요.</div>
+      <div class="section-title4">키워드를 선택하세요</div>
+
+      <div class="divider3"></div>
+      
 
       <form
         method="post"
@@ -251,7 +254,9 @@
 
           <!-- 신발 종류 구두, 부츠/워커, 스니커즈, 샌들/슬리퍼-->
           <div>
-            <hr />
+            <br>
+            <div class="divider3"></div>
+            <div class="section-title3">신발의 종류를 선택하세요</div>
             <input
               type="radio"
               id="shoesSneakers"
@@ -305,10 +310,13 @@
               >샌들/슬리퍼</label
             >
           </div>
+
+
+          <div class="divider3"></div>
         </div>
 
         <!-- 완료 버튼 -->
-        <div class="login-buttons">
+        <div class="login-buttons2">
           <button type="submit">검색</button>
         </div>
       </form>
