--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -109,6 +109,7 @@ p {
   height: 28px;
   font-size: 12px;
   color: #333;
+  padding-left: 10px;
 }
 
 .search-button {
@@ -640,8 +641,8 @@ span input {
 }
 
 .heart-icon {
-  width: 10px;
-  height: 10px;
+  width: 100px;
+  height: 100px;
   margin-bottom: 20px;
 }
 
