--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -18,6 +18,50 @@
 
 
 
+.tabbar {
+  position: fixed;
+  bottom: 13px;
+  left: 680px;
+  width: 360px;
+  height: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
+  background-color: var(--color-background); /* 배경색 */
+  border-top: 1px solid var(--color-border-light); /* 상단 경계선 */
+  padding: 10px 0;
+  border-radius: 20px;
+  margin-left: 15px;
+  z-index: 1000;
+}
+
+.tab-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  color: var(--color-text-subtle); /* 기본 텍스트 색상 */
+  font-size: 12px;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.tab-item img {
+  width: 16px;
+  height: 16px;
+  margin-bottom: 5px;
+  transition: transform 0.3s ease;
+}
+
+.tab-item.active {
+  color: var(--color-primary); /* 활성화된 텍스트 색상 */
+}
+
+.tab-item.active img {
+  transform: scale(1.2); /* 활성화된 아이콘 확대 */
+}
+
+
 
 @font-face {
   font-family: "NanumSquareR";
@@ -867,61 +911,14 @@ span input {
   width: 380px;
 }
 
-.tabbar {
-  position: fixed;
-  /* 화면 하단에 고정 */
-  bottom: 13px;
-  /* 화면 하단에 위치 */
-  width: 360px;
-  /* 부모 요소의 너비에 맞게 설정 */
-  height: 40px;
-  /* 메뉴바 높이 */
-  background: #ffffff;
-  /* 배경색 */
-  display: flex;
-  /* 메뉴 항목을 가로로 배치 */
-  justify-content: space-around;
-  /* 메뉴 항목 간격을 균등하게 배치 */
-  align-items: center;
-  /* 세로 중앙 정렬 */
-  box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
-  /* 상단 그림자 효과 */
-  z-index: 1000;
-  /* 다른 요소 위에 표시 */
-  border-top: 1px solid #e0e0e0;
-  /* 상단 경계선 */
-  border-radius: 20px;
-  margin-left: 15px;
-}
 
-.tabbar a {
-  text-decoration: none;
-  /* 링크 밑줄 제거 */
-  color: #333;
-  /* 텍스트 색상 */
-  font-size: 8px;
-  /* 텍스트 크기 */
-  display: flex;
-  /* 아이콘과 텍스트를 세로로 배치 */
-  flex-direction: column;
-  align-items: center;
-  cursor: pointer;
-}
-
-.tabbar a img {
-  width: 16px;
-  /* 아이콘 크기 */
-  height: 16px;
-  margin-bottom: 2px;
-  /* 아이콘과 텍스트 간격 */
-}
 
 /* Top 버튼 스타일 */
 .top-button {
   position: fixed; /* 화면에 고정 */
   width: 20px; /* 버튼의 너비 */
   right: 210px; /* 오른쪽 여백 */
-  bottom: 60px; /* 아래 여백 */
+  bottom: 70px; /* 아래 여백 */
   height: 20px; /* 버튼의 높이 */
   background-color: #f5f5f5; /* 버튼 배경색 */
   border: none; /* 테두리 제거 */
